# mini_app

./: BUILD.gn  README.md
core/: BUILD.gn
core/app/: mini_app_main.cc  mini_app_main_delegate.cc  mini_app_main_delegate.h
core/application/: BUILD.gn
core/application/browser/: application.cc  application.h  application_protocols.cc  application_protocols.h  application_service.cc  application_service.h  application_system.cc  application_system.h  application_url_loader_factory.cc  application_url_loader_factory.h
core/application/common/: BUILD.gn  application_data.cc  application_data.h  application_file_util.cc  application_file_util.h  application_manifest_constants.cc  application_manifest_constants.h  application_resource.cc  application_resource.h  constants.cc  constants.h  id_util.cc  id_util.h  manifest.cc  manifest.h  manifest_handler.cc  manifest_handler.h  permission_policy_manager.cc  permission_policy_manager.h  permission_types.h
core/application/common/manifest_handlers/: csp_handler.cc  csp_handler.h  permissions_handler.cc  permissions_handler.h  unittest_util.cc  unittest_util.h  warp_handler.cc  warp_handler.h  widget_handler.cc  widget_handler.h
core/application/common/package/: package.cc  package.h  wgt_package.cc  wgt_package.h  xpk_package.cc  xpk_package.h
core/browser/: application_component.cc  application_component.h  mini_app_browser_context.cc  mini_app_browser_context.h  mini_app_browser_main_parts.cc  mini_app_browser_main_parts.h  mini_app_component.h  mini_app_content_browser_client.cc  mini_app_content_browser_client.h  mini_app_controller.cc  mini_app_controller.h  mini_app_window_client.cc  mini_app_window_client.h  mini_app_window_delegate.cc  mini_app_window_delegate.h
core/browser/app_window/: BUILD.gn  app_delegate.h  app_web_contents_helper.cc  app_web_contents_helper.h  app_window.cc  app_window.h  app_window_client.cc  app_window_client.h  app_window_contents.cc  app_window_contents.h  draggable_region.cc  draggable_region.h  native_app_window.h  size_constraints.cc  size_constraints.h
core/browser/ui/: BUILD.gn  app_window_easy_resize_window_targeter.cc  app_window_easy_resize_window_targeter.h  app_window_frame_view.cc  app_window_frame_view.h  chrome_native_app_window_views.cc  chrome_native_app_window_views.h  chrome_native_app_window_views_aura.cc  chrome_native_app_window_views_aura.h  mini_app_view_delegate.cc  mini_app_view_delegate.h  native_app_window_views.cc  native_app_window_views.h  shaped_app_window_targeter.cc  shaped_app_window_targeter.h  ui_env_controller.cc  ui_env_controller.h  ui_env_controller_aura.cc  ui_env_controller_aura.h
core/common/: mini_app_content_client.cc  mini_app_content_client.h  mini_app_scoped_allow_blocking.h
core/renderer/: mini_app_content_renderer_client.cc  mini_app_content_renderer_client.h  mini_app_module_system.cc  mini_app_module_system.h  mini_app_native_module.h  mini_app_render_frame_observer.cc  mini_app_render_frame_observer.h  mini_app_test_native_module.cc  mini_app_test_native_module.h
demo/frame_buffer/: BUILD.gn  devices_info.cc  devices_info.h  main.cc  output_framebuffer.cc  output_framebuffer.h
demo/network_service_test/: BUILD.gn  main.cc  network_service.drawio  readme.md
demo/test/data/dummy_app2/: main.html
demo/test/data/main_document/: main.js  manifest.json
demo/test/data/web_start_URL/: manifest.json
demo/test_in_linux/: BUILD.gn  main.cc
demo/test_mojo/: BUILD.gn  main.cc
demo/test_x11_window/: BUILD.gn  main.cc
demo/viz_test/: BUILD.gn  demo_host.h  demo_service.cc  demo_service.h  demo_window.cc  demo_window.h  main.cc
doc/: chromium.drawio  content_blink.drawio  content_startup.drawio  content_webcontents.drawio  render.drawio  viz+cc.drawio  webcontent.drawio
test_data/test_files/: main.html
