group("mini_app") {
    deps = []
    if(is_linux || is_win) {
        deps += [
            "//mini_app/core:mini_app_executable"
        ]
    }
    if(is_linux) {
        deps += [
            "//mini_app/demo/frame_buffer:frame_buffer_test_demo",
            "//mini_app/demo/test_x11_window:test_x11_window",
            "//mini_app/demo/test_mojo:test_mojo",
            "//mini_app/demo/viz_test",
        ]
    }
}