import("//build/config/ui.gni")
import("//tools/grit/grit_rule.gni")
import("//tools/grit/repack.gni")

executable("mini_app_exe") {
    sources = [
        "app/mini_app_main.cc",
    ]
    deps = [
        ":mini_app_library",
    ]
    if (is_win) {
        deps += [
            "//sandbox",
        ]
        # configs += [ "//build/config/win:console" ]
        # configs += [ "//build/config/win:windowed" ]
    }
}

source_set("mini_app_library") {
    sources = [
        "app/mini_app_main_delegate.cc",
        "app/mini_app_main_delegate.h",
        "browser/application_component.cc",
        "browser/application_component.h",
        "browser/mini_app_browser_context.cc",
        "browser/mini_app_browser_context.h",
        "browser/mini_app_browser_main_parts.cc",
        "browser/mini_app_browser_main_parts.h",
        "browser/mini_app_component.h",
        "browser/mini_app_content_browser_client.cc",
        "browser/mini_app_content_browser_client.h",
        "browser/mini_app_controller.cc",
        "browser/mini_app_controller.h",
        "browser/mini_app_window_client.cc",
        "browser/mini_app_window_client.h",
        "browser/mini_app_window_delegate.cc",
        "browser/mini_app_window_delegate.h",
        "common/mini_app_content_client.cc",
        "common/mini_app_content_client.h",
        "renderer/mini_app_content_renderer_client.cc",
        "renderer/mini_app_content_renderer_client.h",
        "renderer/mini_app_render_frame_observer.cc",
        "renderer/mini_app_render_frame_observer.h",
    ]
    deps = [
        ":mini_pak",
        "//base",
        "//content/public/app:both",
        "//content/public/browser",
        "//content/public/child",
        "//content/public/common",
        "//content/public/gpu",
        "//content/public/renderer",
        "//content/public/utility",
        "//mini_app/core/application:mini_app_application_lib",
        "//mini_app/core/browser/app_window:app_window_lib",
        "//mini_app/core/browser/ui:mini_app_ui",
        "//gin"
    ]
}

repack("mini_pak") {
    sources = [
        "$root_gen_dir/content/app/resources/content_resources_100_percent.pak",
        "$root_gen_dir/content/browser/resources/media/media_internals_resources.pak",
        "$root_gen_dir/content/browser/tracing/tracing_resources.pak",
        "$root_gen_dir/content/browser/webrtc/resources/webrtc_internals_resources.pak",
        "$root_gen_dir/content/content_resources.pak",
        "$root_gen_dir/mojo/public/js/mojo_bindings_resources.pak",
        "$root_gen_dir/net/net_resources.pak",
        "$root_gen_dir/third_party/blink/public/resources/blink_resources.pak",
        "$root_gen_dir/third_party/blink/public/resources/blink_scaled_resources_100_percent.pak",
        "$root_gen_dir/third_party/blink/public/strings/blink_strings_en-US.pak",
        "$root_gen_dir/ui/resources/ui_resources_100_percent.pak",
        "$root_gen_dir/ui/resources/webui_resources.pak",
        "$root_gen_dir/ui/strings/app_locale_settings_en-US.pak",
        "$root_gen_dir/ui/strings/ui_strings_en-US.pak",
        "$root_gen_dir/ui/views/resources/views_resources_100_percent.pak",
        "$root_gen_dir/content/browser/devtools/devtools_resources.pak",
    ]

    deps = [
        "//content:resources",
        "//content/app/resources",
        "//content/browser/devtools:resources",
        "//content/browser/resources/media:media_internals_resources",
        "//content/browser/tracing:resources",
        "//content/browser/webrtc/resources",
        "//mojo/public/js:resources",
        "//net:net_resources",
        "//third_party/blink/public:resources",
        "//third_party/blink/public:scaled_resources_100_percent",
        "//third_party/blink/public/strings",
        "//ui/resources",
        "//ui/strings",
        "//ui/views/resources",
    ]
    output = "$root_out_dir/mini_app.pak"
}