


executable("frame_buffer_test_demo") {
    sources = [
        "main.cc",
        "devices_info.cc",
        "devices_info.h",
        "output_framebuffer.cc",
        "output_framebuffer.h",
    ]

    deps = [
        "//base",
        "//skia",
        "//ui/android",
        "//ui/display",
    ]
}
