import("//build/config/ui.gni")

executable("viz_test") {
  sources = [
    "main.cc",

    "demo_service.cc",
    "demo_service.h",
    "demo_window.cc",
    "demo_window.h",
  ]

  deps = [
    "//base",
    "//base:i18n",
    # "//components/viz/demo:host",
    # "//components/viz/demo:service",
    "//components/viz/service",
    "//components/viz/service/main",
    "//mojo/core/embedder",
    "//skia",
    "//ui/events",
    "//ui/events/platform",
    "//ui/platform_window",
  ]

  if (use_x11) {
    deps += [
      "//ui/events/platform/x11",
      "//ui/platform_window/x11",
    ]
    configs += [ "//build/config/linux:x11" ]
    # ldflags = [ "-lX11" ]
  }

  if (is_win) {
    deps += [ "//ui/platform_window/win" ]
  }

}